# appstore-mcp

./: .env.example  .gitignore  Cargo.toml  README.md  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
docs/: TOOLS.md
evaluations/: appstore_evals.xml
packaging/mcpb/: manifest.json
plugins/appstore-mcp/.claude-plugin/: plugin.json
scripts/: gen_tools_doc.py  integration_test.py
src/: auth.rs  client.rs  config.rs  error.rs  main.rs  upload.rs
src/server/: analytics.rs  apps.rs  assets.rs  availability.rs  custom_product_pages.rs  events.rs  generic.rs  iap.rs  mod.rs  offer_codes.rs  offers.rs  pricing.rs  promotions.rs  provisioning.rs  reviews.rs  submission.rs  subscriptions.rs  testflight.rs  users.rs  versions.rs  xcode_cloud.rs
