[package]
name = "appstore-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing the Apple App Store Connect API (101 tools)"
license = "MIT"
repository = "https://github.com/forgeopslabs/appstore-mcp"
homepage = "https://github.com/forgeopslabs/appstore-mcp"
documentation = "https://github.com/forgeopslabs/appstore-mcp/blob/main/docs/TOOLS.md"
readme = "README.md"
keywords = ["mcp", "app-store-connect", "apple", "appstore", "testflight"]
categories = ["command-line-utilities", "api-bindings", "development-tools"]

[profile.release]
strip = true
lto = "thin"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
thiserror = "2"
anyhow = "1"
md-5 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
